2010-08-25  Emanuel Schuetze <emanuel@intevation.de>

	* configure.ac: Change date and version of compendium-en.

2010-08-25  Werner Koch  <wk@g10code.com>

	* patches/gnupg2-2.0.16/04-gpgtar-2.patch: Update.

2010-08-24  Werner Koch  <wk@g10code.com>

	* patches/gnupg2-2.0.16/04-gpgtar-2.patch: New.
	* Makefile.am (EXTRA_DIST): Add patch

2010-08-24  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Update libassuan.

2010-08-17  Emanuel Schuetze <emanuel@intevation.de>

	* configure.ac: Added date and version for English compendium.

2010-07-27  Werner Koch  <wk@g10code.com>

	* src/sha1sum.c (unescapefname): Fix unescaping of \f,\v and \b.

2010-07-23  Werner Koch  <wk@g10code.com>

	* patches/gnupg2-2.0.16/03-kbx-realloc.patch: New.

2010-07-22  Werner Koch  <wk@g10code.com>

	* patches/gpgme/02-w32-io-threads.patch: Revert the theoretical
	more robust pipe/thread creation.

2010-07-21  Werner Koch  <wk@g10code.com>

	* src/uninst-gpgol.nsi, src/inst-gpgol.nsi: Install pt and sv locale.

	* packages/packages.current: Update gpgex and libgpg-error.

	* src/inst-gpgex.nsi: Install pt locale.
	* src/uninst-gpgex.nsi: Uninstall pt locale.

2010-07-21  Emanuel Schuetze <emanuel@intevation.de>
	
	* src/uninst-gpg4win.nsi, src/inst-gpg4win.nsi:
	Update for install/uninstall new README.pt.txt file.
	* src/Makefile.am, doc/Makefile.am: Add README.pt.txt.

2010-07-19  Werner Koch  <wk@g10code.com>

	* src/uninst-gnupg2.nsi: Uninstall gpgtar.exe
	* src/inst-gnupg2.nsi: Install gpgtar.exe

	* patches/gnupg2-2.0.16/02-gpgtar.patch: New.
	* patches/gnupg2-2.0.16/01-estream.patch: New.

	* packages/packages.current: Update gnupg and dirmngr

2010-07-15  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Update libksba

2010-07-15  Emanuel Schuetze <emanuel@intevation.de>

	* src/uninst-kleopatra.nsi: Changed uninstall path from 
	kcm_kleopatra.dll.

2010-07-14  Emanuel Schuetze <emanuel@intevation.de>

	* packages/packages.current, 