@@ -291,7 +291,8 @@
 
 # Internal packages.
 @HAVE_PKG_COMPENDIUM_DE@
+@HAVE_PKG_COMPENDIUM_EN@
 
-@HAVE_PKG_MAN_NOVICE_EN@
+# @HAVE_PKG_MAN_NOVICE_EN@
 
 # @HAVE_PKG_MAN_ADVANCED_EN@
